--- a/game/style.css
+++ b/game/style.css
@@ -130,3 +130,36 @@ section#games {
 .swiper-pagination-bullet-active {
   background-color: gray ;
 }
+
+/*Footer*/
+
+.game-footer {
+    background-color: #2b2b2b;
+    color: #fff;
+    padding: 20px 0;
+  }
+  
+  .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .footer-links a {
+    color: #fff;
+    margin-right: 15px;
+    text-decoration: none;
+  }
+  
+  .footer-social a {
+    color: #fff;
+    font-size: 20px;
+    margin-right: 15px;
+  }
+  
+  .footer-copyright {
+    font-size: 14px;
+  }
+  
