--- a/game/style.css
+++ b/game/style.css
@@ -59,6 +59,15 @@ body{
     margin-right: 15px;
 }
 
+.header-search-field {
+    height: 40px;
+    margin-top: 15px;
+    padding-left: 18px;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    font-size: 14px;
+}
+
 #carro{
     margin-right: 20px;
 }
@@ -134,6 +143,7 @@ section#games {
 /*Footer*/
 
 .game-footer {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #2b2b2b;
     color: #fff;
     padding: 20px 0;
